20080225
 - (dtucker) [openbsd-compat/fake-rfc2553.h] rename ssh_gai_strerror hack
   since it now conflicts with the helper function in misc.c.  From
   vinschen AT redhat.com.

20080224
 - (tim) [contrib/cygwin/ssh-host-config]
   Grammar changes on SYSCONFDIR LOCALSTATEDIR messages.
   Check more thoroughly that it's possible to create the /var/empty directory.
   Patch by vinschen AT redhat.com

20080210
 - OpenBSD CVS Sync
   - chl@cvs.openbsd.org 2008/01/11 07:22:28
     [sftp-client.c sftp-client.h]
     disable unused functions
     initially from tobias@, but disabled them by placing them in
     "#ifdef notyet" which was asked by djm@
     ok djm@ tobias@
   - djm@cvs.openbsd.org 2008/01/19 19:13:28
     [ssh.1]
     satisfy the pedants: -q does not suppress all diagnostic messages (e.g.
     some commandline parsing warnings go unconditionally to stdout).
   - djm@cvs.openbsd.org 2008/01/19 20:48:53
     [clientloop.c]
     fd leak on session multiplexing error path. Report and patch from
     gregory_shively AT fanniemae.com
   - djm@cvs.openbsd.org 2008/01/19 20:51:26
     [ssh.c]
     ignore SIGPIPE in multiplex client mode - we can receive this if the
     server runs out of fds on us midway. Report and patch from
     gregory_shively AT fanniemae.com
   - djm@cvs.openbsd.org 2008/01/19 22:04:57
     [sftp-client.c]
     fix remote handle leak in do_download() local file open error path;
     report and fix from sworley AT chkno.net
   - djm@cvs.openbsd.org 2008/01/19 22:22:58
     [ssh-keygen.c]
     when hashing individual hosts (ssh-keygen -Hf hostname), make sure we
     hash just the specified hostname and not the entire hostspec from the
     keyfile. It may be of the form "hostname,ipaddr", which would lead to
     a hash that never matches. report and fix from jp AT devnull.cz
   - djm@cvs.openbsd.org 2008/01/19 22:37:19
     [ssh-keygen.c]
     unbreak line numbering (broken in revision 1.164), fix error message